--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pebble-timer",
-  "author": "MakeAwesomeHappen",
+  "author": "conor.code@gmail.com",
   "version": "1.0.0",
   "keywords": ["pebble-app"],
   "private": true,
