--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "conor.code@gmail.com",
   "version": "1.0.0",
   "keywords": ["pebble-app"],
-  "private": true,
+  "private": false,
   "dependencies": {},
   "pebble": {
     "displayName": "ripple",
